# NOSBench

./: .gitignore  LICENSE  README.md  development.kdl  main.py  pyproject.toml
examples/: find_baseline.py  random_search.py  regularized_evolution.py  smac.py  smac_bo.py  smac_bohb.py  tune_torch_optimizer_on_pfn_pipeline.py
nosbench/: __init__.py  device.py  function.py  nosbench.py  noslib.py  optimizers.py  pipeline.py  program.py  utils.py
nosbench/pfns/: bar_distribution.py  model.py  utils.py
noslib/: __init__.py  function.py  main.py  noslib.py  optimizers.py  pipeline.py  program.py  regularized_evolution.py  zero.py
scripts/: update_cache.py
tests/: test_optimizers.py
