[tool.poetry]
name = "nosbench"
version = "0.1.0"
description = ""
authors = ["Goktug <20567087+goktug97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.1.0"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
configspace = "0.7.1"
filelock = "^3.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
mypy = "^1.6.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
